[package]
name = "vello_pacing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
wgpu.workspace = true
vello.workspace = true
ash = { version = "0.38.0", default-features = false }
tracing = "0.1.40"
ndk = { version = "0.9", features = ["api-level-33"] }
nix = { default-features = false, features = ["time"], version = "0.29.0" }

[lints]
workspace = true
