[package]
name = "vello_tests"
description = "Integration tests for Vello."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics"]
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
anyhow = { workspace = true }

pollster = { workspace = true }
png = "0.17.14"
futures-intrusive = { workspace = true }
nv-flip = "0.1.2"
image = { workspace = true, features = ["png"] }

scenes = { workspace = true }

[features]
cosmic_text = ["scenes/cosmic_text"]