[package]
name = "xtask"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dev tooling for Vello"
keywords = ["testing"]
categories = ["testing", "graphics"]


[dependencies]
kompari = { git = "https://github.com/linebender/kompari.git", rev = "2643680d3e54a34b354a2dac5c62765c49d86176" }
kompari_tasks = { git = "https://github.com/linebender/kompari.git", rev = "2643680d3e54a34b354a2dac5c62765c49d86176" }
clap = { workspace = true, features = ["derive"] }

[lints]
workspace = true
