[package]
name = "vello_encoding"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["full"]

# Enables support for the full pipeline including late-bound
# resources (gradients, images and glyph runs)
full = ["skrifa", "guillotiere"]

# Enables an optional GPU memory usage estimation utility. This can be used to
# perform additional computations in order to estimate the minimum required allocations
# for buffers backing bump-allocated GPU memory.
bump_estimate = []

[dependencies]
bytemuck = { workspace = true }
skrifa = { workspace = true, optional = true }
peniko = { workspace = true }
guillotiere = { version = "0.6.2", optional = true }
