[package]
name = "vello_encoding"
version.workspace = true # We mimic Vello's version
description = "Vello types that represent the data that needs to be rendered."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["full"]

# Enables support for the full pipeline including late-bound
# resources (gradients, images and glyph runs)
full = ["dep:skrifa", "dep:guillotiere"]

# Enables an optional GPU memory usage estimation utility. This can be used to
# perform additional computations in order to estimate the minimum required allocations
# for buffers backing bump-allocated GPU memory.
bump_estimate = []

[lints]
workspace = true

[dependencies]
bytemuck = { workspace = true }
skrifa = { workspace = true, optional = true }
peniko = { workspace = true }
guillotiere = { version = "0.6.2", optional = true }
smallvec = { workspace = true }
