[package]
name = "vello_shaders"
version.workspace = true # We mimic Vello's version
description = "Vello infrastructure to preprocess and cross-compile shaders at compile time."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

publish = false # Remove this when the package is ready for publishing

[features]
default = ["compile", "wgsl", "msl", "full"]
compile = ["naga", "thiserror"]

# Enables the complete imaging model. When this feature is disabled, the fine rasterization
# stage only supports drawing paths with a solid brush and clipping, and the shaders can
# not be run with an encoding that contains gradient fills and images.
full = []

# Target shading language variants of the vello shaders to link into the library.
wgsl = []
msl = []

[lints]
workspace = true

[dependencies]
naga = { version = "0.19.2", features = ["wgsl-in", "msl-out",], optional = true }
thiserror = { version = "1.0.58", optional = true }

[build-dependencies]
naga = { version = "0.19.2",  features = ["wgsl-in", "msl-out",] }
thiserror = "1.0.58"
