[package]
name = "vello_tests"
description = "Helper code for writing Vello tests."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
vello = { path = "../.." }
image = "0.24.9"
anyhow = { workspace = true }

wgpu = { workspace = true }
pollster = { workspace = true }
png = "0.17.13"
futures-intrusive = { workspace = true }
