[package]
name = "velato"
version = "0.0.1"
description = "Lottie renderer built on vello."
categories = ["rendering", "graphics"]
keywords = ["2d", "vector-graphics", "animation", "lottie"]

license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
vello = { path = "../../" }
bodymovin = { git = "https://github.com/dfrg/bodymovin-rs", rev= "c156dda9" }
