[package]
name = "headless"
description = "An example showing how to use Vello to create raster images."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
scenes = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

pollster = { workspace = true }
env_logger = "0.11.5"
png = "0.17.14"
futures-intrusive = { workspace = true }

[features]
cosmic_text = ["scenes/cosmic_text"]