[package]
name = "headless"
description = "An example showing how to use Vello to create raster images."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
scenes = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }

pollster = { workspace = true }
env_logger = "0.11.8"
png = { workspace = true }
futures-intrusive = { workspace = true }
