[package]
name = "run_wasm"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-run-wasm = { git = "https://github.com/rukai/cargo-run-wasm", rev = "ad771ae1bc51d5e6f7a25e031fd3df00345f2362" }
