[package]
name = "scenes"
description = "Vello scenes used in the other examples."
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
vello = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
image = { workspace = true, features = ["jpeg"] }
rand = "0.8.5"


cosmic-text = { version = "0.12.1", optional = true }
unicode-segmentation = { version = "1.12.0", optional = true }

# for pico_svg
roxmltree = "0.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = { workspace = true }

[target.wasm32-unknown-unknown.dependencies]
# We have a transitive dependency on getrandom and it does not automatically
# support wasm32-unknown-unknown. We need to enable the js feature.
getrandom = { version = "0.2.15", features = ["js"] }

[features]
cosmic_text = ["dep:cosmic-text", "dep:unicode-segmentation"]
