[package]
name = "shapes"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
vello = { git = "https://github.com/linebender/vello" }
